cpu rhmc on jlab works

--- a/src/create_RHMC_job/patrick.cfg
+++ b/src/create_RHMC_job/patrick.cfg
@@ -70,3 +70,12 @@ compute_additional_d1 = 0                                      # compute more D_
 no_additional_d1_sources = 256                                 # number of additional D_1 traces
 dens_output_d1 = /path/dens_d1_5000.dat                        # output filename and path of traces (overwrites existing file)
 
+
+r_inv_1f_degree = 14
+r_inv_2f_degree = 14
+r_1f_degree = 14
+r_2f_degree = 14
+r_bar_1f_degree = 12
+r_bar_2f_degree = 12
+
+
